--- a/frontend/src/components/pages/Rezervacija.css
+++ b/frontend/src/components/pages/Rezervacija.css
@@ -6,7 +6,7 @@
 }
 .hero-container-rezerv {
   background: url('../../images/rezervacija.jpg') center center/cover repeat; 
-  height: 50vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -21,13 +21,18 @@
 }
 
 .step-one-container{
+ /* background: url('../../images/rezervacija.jpg') center center/cover repeat; */
+  
   display: flex;
   flex-direction: column;
   
   width: 100%;
+  
   justify-content: center;
   text-align: center;
-  background-size: cover;
+  width: 700px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.74);
   
 }
 
@@ -44,8 +49,6 @@
   justify-content: center;
   color: black;
   font-size: x-large;
-  border: 1px solid black;
-  
 }
 
 .first-column-2 {
@@ -70,28 +73,34 @@
   padding: 4rem;
   justify-content: center;
   color: black;
+  
+  
 }
 .columnPick{
   text-align: center;
-  width: 30%;
+  width: 25%;
   float: left;
   padding: 5px;
   color: black;
   font-size: x-large;
-  border: 1px solid black;
+  
 }
 
 .btn-povratak{
-  float: left;
-  padding: 30px;
+  float:left;
+  padding-left:500px;
+  padding-right: 132px;
     font-size: 50px;
-    border-radius: 40px;
+    
+    
 }
 .btn-nastavak{
   float: right;
-  padding: 30px;
+  padding-right: 500px;
+  padding-left: 137.5px;
     font-size: 50px;
-    border-radius: 40px;
+    
+    
 }
 
 .title-rezerv{
@@ -155,4 +164,175 @@
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+}
+
+.multiStepContainer{
+  background: url('../../images/rezervacija.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 120vh;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid;
+  
+}
+
+.title-rezerv{
+  font-size: 40px;
+  text-align: center;
+  padding: 20px;
+  width: 700px;
+  margin: auto;
+  color: aliceblue;
+  
+}
+
+.step-two-container{
+  background-color: aliceblue;
+  
+  
+}
+
+.roomslist-center{
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  margin: auto;
+}
+
+.single-room-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1000px;
+  margin: auto;
+  color: black;
+  font-size: medium;
+  text-align: left;
+  background-color:#5F9EA0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
+}
+.left-side {
+  text-align: center;
+  width: 500px;
+  float: left;
+  color: black;
+  padding: 5px;
+  
+}
+
+.right-side {
+  width: 45%;
+  float: right;
+  color: black;
+  padding: 5px;
+  
+}
+.right-side.p{
+  font-family: Arial ;
+  
+}
+
+
+.btn-primary-room-link{
+  text-align: left;
+  color: blue;
+}
+.room-name{
+  font-size: x-large;
+}
+
+.link-sobe{
+  font-size: small;
+  padding-top: 100px;
+  color: green
+}
+
+
+/* room */
+.room {
+  box-shadow: var(--lightShadow);
+  transition: var(--mainTransition);
+}
+
+.room:hover {
+  box-shadow: var(--darkShadow);
+}
+
+.img-container {
+  position: relative;
+}
+.img-container img {
+  width: 100%;
+  display: block;
+  transition: var(--mainTransition);
+}
+.price-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.74);
+  color: var(--mainWhite);
+  padding: 0.3rem 0.6rem 0.5rem;
+  border-bottom-right-radius: 1rem;
+  font-size: 0.5rem;
+  text-align: center;
+  
+}
+.price-top h6 {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  font-weight: 300;
+  letter-spacing: var(--mainSpacing);
+  color:black;
+  font-size: 20px;
+}
+.room-link {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: scale(0);
+  transition: all 0.3s linear;
+}
+
+.room-info {
+  background: var(--darkGrey);
+  text-transform: capitalize;
+  padding: 0.5rem 0;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: var(--mainSpacing);
+}
+
+/*Slika da bude link*/
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  
+}
+
+.left-side:hover .image {
+  opacity: 0.3;
+}
+
+.left-side:hover .middle {
+  opacity: 1;
 }
