--- a/frontend/src/components/PopUp2.css
+++ b/frontend/src/components/PopUp2.css
@@ -1,46 +1,32 @@
-/* index.css */ 
-.modal {
-  padding-top: 25px;
-    font-size: 12px;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .popup{
-    align-self: center;
-  }
-  .modal > .header {
-    width: 50%;
-    border-bottom: 1px solid gray;
-    font-size: 18px;
-    text-align: center;
-    padding: 5px;
-  }
-  .modal > .content {
-    width: 50%;
-    padding: 10px 5px;
-    
-    }
-  .modal > .actions {
-    margin: auto;
-  }
-  .modal > .actions {
-    width: 100%;
-    padding: 10px 5px;
-    text-align: center;
-  }
-  .modal > .close {
-    cursor: pointer;
-    position: absolute;
-    display: block;
-    padding: 2px 5px;
-    line-height: 20px;
-    right: -10px;
-    top: -10px;
-    font-size: 24px;
-    background: #ffffff;
-    border-radius: 18px;
-    border: 1px solid #cfcece;
-  }
+.mymodal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  border-radius: 10px;
+  outline: none;
+  padding: 100px;
+  font-size: 40px;
+  text-align:center;
+}
+.myoverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.btn-potvrdi-rez{
+  float:right;
+  padding-right:500px;
+    font-size: 50px;
+}
+.potvrda{
+  color: green;
+}
